  * Show Manager: fix crash with an infinite duration RGBMatrix
  * Script Editor: improve systemcommand parsing (thanks to jpue)
  * Virtual Console/Clock: countdown mode can now run a list of Functions
  * Virtual Console/Solo Frame: add an option to exclude functions monitored by buttons to be stopped
  * Virtual Console/Slider: fix level tab channel list sorting (thanks to jpue)
  * webaccess: improve CSS consistency across browsers (thanks to jpue)
  * webaccess: fix synchronization of animation widget RGB colors (thanks to jpue)
  * webaccess: add getWidgetFunction API (thanks to mccartyp)
  * Fixture Editor: in mode editor, don't allow a channel to act on itself (thanks to Edgar Aichinger)
  * Input profiles: updated AKAI APC40 mkII profile (thanks to David Himes)
  * New fixtures: beamZ COB 50, Chauvet EZLink Par Q6 BT, Chauvet Freedom Par Hex 4 (thanks to Yestalgia)
  * New fixture: OXO ColorZoom 180 (thanks to David Garyga)
  * New fixture: Cameo P2 T (thanks to Christoph Müllner)
  * New fixtures: Stairville Remus HexSpot 515, Remus QuadZoom 610, Varytec GigaBar 240 LED, Stairville RevueLED 120 COB True White (thanks to Liam Clark)
  * New fixtures: MagicFX Eco2Jet, Psyco2Jet, Stage Flame, SmokeJet, StadiumShot III, StadiumBlower, StadiumBlaster, SwirlFan II (thanks to Liam Clark)
  * New fixture: Martin ERA 150 Wash (thanks to Liam Clark)
  * New fixtures: Eurolite LED Silent PAR 6, beamZ BT430 PAR (thanks to Pascal Fleury)
  * New fixtures: lightmaXX LED Gun, Cameo Octafly XS, Ghost Spoty (thanks to Arnaud)
  * New fixture: ColorKey Scorpius (thanks to David Himes)
  * New fixture: Varytec LED Derby ST (thanks to Valentin Simson)
  * New fixtures: ETC ColorSource Fresnel V, LDDE NanoPix Cyc, LDDE Spectra MasterD 1000 (thanks to Edgar Aichinger)
  * New fixtures: ACME Ginamp, Astera Titan Tube FP1 (thanks to Michael Tosatto)
  * New fixture: UKing ZQ01137 18x RGB+UV PAR (thanks to Adrienne Teicher)